crates/ruff_python_parser/tests/snapshots/invalid_syntax@assign_stmt_invalid_starred_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/assign_stmt_invalid_starred_expr.py
---
## AST

```
Module(
    ModModule {
        range: 0..43,
        body: [
            Assign(
                StmtAssign {
                    range: 0..12,
                    targets: [
                        Name(
                            ExprName {
                                range: 0..1,
                                id: "x",
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Starred(
                        ExprStarred {
                            range: 4..12,
                            value: BoolOp(
                                ExprBoolOp {
                                    range: 5..12,
                                    op: And,
                                    values: [
                                        Name(
                                            ExprName {
                                                range: 5..6,
                                                id: "a",
                                                ctx: Load,
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                range: 11..12,
                                                id: "b",
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    range: 13..25,
                    targets: [
                        Name(
                            ExprName {
                                range: 13..14,
                                id: "x",
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Starred(
                        ExprStarred {
                            range: 17..25,
                            value: Yield(
                                ExprYield {
                                    range: 18..25,
                                    value: Some(
                                        Name(
                                            ExprName {
                                                range: 24..25,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Assign(
                StmtAssign {
                    range: 26..42,
                    targets: [
                        Name(
                            ExprName {
                                range: 26..27,
                                id: "x",
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Starred(
                        ExprStarred {
                            range: 30..42,
                            value: Lambda(
                                ExprLambda {
                                    range: 31..42,
                                    parameters: Some(
                                        Parameters {
                                            range: 38..39,
                                            posonlyargs: [],
                                            args: [
                                                ParameterWithDefault {
                                                    range: 38..39,
                                                    parameter: Parameter {
                                                        range: 38..39,
                                                        name: Identifier {
                                                            id: "x",
                                                            range: 38..39,
                                                        },
                                                        annotation: None,
                                                    },
                                                    default: None,
                                                },
                                            ],
                                            vararg: None,
                                            kwonlyargs: [],
                                            kwarg: None,
                                        },
                                    ),
                                    body: Name(
                                        ExprName {
                                            range: 41..42,
                                            id: "x",
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x = *a and b
  |      ^^^^^^^ Syntax Error: boolean expression cannot be used here
2 | x = *yield x
3 | x = *lambda x: x
  |


  |
1 | x = *a and b
2 | x = *yield x
  |      ^^^^^^^ Syntax Error: yield expression cannot be used here
3 | x = *lambda x: x
  |


  |
1 | x = *a and b
2 | x = *yield x
3 | x = *lambda x: x
  |      ^^^^^^^^^^^ Syntax Error: lambda expression cannot be used here
  |
